src/test/deca/syntax/invalid/int_trop_grand.synt
int_trop_grand.deca:11: